--- a/templates/base.html
+++ b/templates/base.html
@@ -43,11 +43,12 @@
     }
 
   </style>
+ 
 </head>
 
 {% include "navbar.html" %}
 
-<body style="background-color:rgb(243, 255, 236) !important;">
+<body style="background-color:#F6F6F6!important;">
 
     <div class="mt-5 pt-4">
     {% if messages %}
