--- a/templates/home.html
+++ b/templates/home.html
@@ -3,67 +3,27 @@
 {% block content %}
   <main>
     <div class="container" >
-
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg mt-3 mb-5" style="background-color:rgb(212, 250, 192) !important;">
-
-        <!-- Navbar brand -->
-        <span class="navbar-brand" id="Branded">Categories:</span>
-
-        <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-          aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="basicExampleNav">
-
-          <!-- Links -->
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">All
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Plants</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Gardening Tools</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pots</a>
-            </li>
-
-          </ul>
-          <!-- Links -->
-
-          <form class="form-inline" method="GET" action="">
-            <div class="md-form my-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-          </form>
-        </div>
-        <!-- Collapsible content -->
-
-      </nav>
-      <!--/.Navbar-->
-
+      <style>
+        .card:hover {
+          transform: scale(1.02);
+          transition: ease-in-out 0.5s;
+        }
+      </style>
+      
       <!--Section: Products v.3-->
-      <section class="text-center mb-4">
+      <section class="text-center mb-4 mt-4">
 
         <div class="row wow fadeIn">
 
           {% for item in object_list %}
           <div class="col-lg-3 col-md-6 mb-4">
 
-            <div class="card">
+            <div class="card" style="border-radius: 20px;">
 
               <div class="view overlay">
                 {% comment %} 
                 <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" {% endcomment %}
-                <img src="{{ item.image.url }}" class="card-img-top">
+                <img src="{{ item.image.url }}" style="border-radius: 20px;" class="card-img-top">
                 <a href="{{ item.get_absolute_url }}">
                   <div class="mask rgba-white-slight"></div>
                 </a>
