--- a/templates/Landing.html
+++ b/templates/Landing.html
@@ -112,11 +112,40 @@
             </div>
         </div>
     </div>
+    <div class="text-center">
+        <a class="btn btn-dark" href="/home/" style="border-radius: 20px; color: #aedac8;">Shop Now</a>
+    </div>
 </section>
 
-<div class="text-center">
-    <a class="btn btn-dark" href="/home/" style="border-radius: 20px;">Shop Now</a>
+<div class="container">
+    <div class="pl-3" style="background-color: #161616; border-radius: 20px;">
+        <h2 class="mb-3 mt-5 pt-3 pr-3" style="color: #aedac8;"><strong>About Us</strong></h2>
+        <p class="pb-3 pr-3" style="color: #aedac8;">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+            Reprehenderit, illum ab voluptatem totam est iste, 
+            excepturi voluptas veniam hic odit ipsum? Quam rerum hic culpa debitis officiis adipisci, 
+            quas excepturi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, illum ab voluptatem totam est iste,
+            excepturi voluptas veniam hic odit ipsum? Quam rerum hic culpa debitis officiis adipisci,
+            quas excepturi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, illum ab voluptatem totam est iste,
+            excepturi voluptas veniam hic odit ipsum? Quam rerum hic culpa debitis officiis adipisci,
+            quas excepturi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, illum ab voluptatem totam est iste,
+            excepturi voluptas veniam hic odit ipsum? Quam rerum hic culpa debitis officiis adipisci,
+            quas excepturi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit, illum ab voluptatem totam est iste,
+            excepturi voluptas veniam hic odit ipsum? Quam rerum hic culpa debitis officiis adipisci,
+            quas excepturi.
+        </p>
+    </div>
 </div>
+
+
 
 
 {% endblock content %}
