--- a/templates/Landing.html
+++ b/templates/Landing.html
@@ -1,121 +1,62 @@
 {% extends "base.html" %}
 
 {% block content %}
-<img>
-<section class="pt-5 ">
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <h3 class="mb-3"><strong>Our Products</strong></h3>
-            </div>
-            <div class="col-6 text-right" >
-                <a class="btn btn-dark btn-primary mb-3 mr-1" style="border-radius: 20px;"
-                href="#carouselExampleIndicators2" role="button" data-slide="prev" >
-                    <i class="fa fa-arrow-left"></i>
-                </a>
-                <a class="btn btn-dark btn-primary mb-3 " style="border-radius: 20px;" href="#carouselExampleIndicators2" role="button" data-slide="next">
-                    <i class="fa fa-arrow-right"></i>
-                </a>
-            </div>
-            <div class="col-12">
-                <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel" data-interval="5000">
 
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="row">
+<section class="container">
 
-                                <div class="col-md-4 mb-3">
-                                    <div class="card" style="border-radius: 20px;">
-                                        <img class="img-fluid" alt="100%x280" style="border-radius: 20px;"
-                                            src="https://images.unsplash.com/photo-1532781914607-2031eca2f00d?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=7c625ea379640da3ef2e24f20df7ce8d">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Special title treatment</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to
-                                                additional content.</p>
+    <div class="row wow fadeIn mt-4">
 
-                                        </div>
+        {% for item in object_list %}
+        <div class="col-lg-3 col-md-6 mb-4">
 
-                                    </div>
-                                </div>
-                                <div class="col-md-4 mb-3">
-                                    <div class="card" style="border-radius: 20px;">
-                                        <img class="img-fluid" alt="100%x280" style="border-radius: 20px;"
-                                            src="https://images.unsplash.com/photo-1517760444937-f6397edcbbcd?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=42b2d9ae6feb9c4ff98b9133addfb698">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Special title treatment</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to
-                                                additional content.</p>
+            <div class="card" style="border-radius: 20px;">
 
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 mb-3">
-                                    <div class="card" style="border-radius: 20px;">
-                                        <img class="img-fluid" alt="100%x280" style="border-radius: 20px;"
-                                            src="https://images.unsplash.com/photo-1532712938310-34cb3982ef74?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=3d2e8a2039c06dd26db977fe6ac6186a">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Special title treatment</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to
-                                                additional content.</p>
-
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="row">
-
-                                <div class="col-md-4 mb-3">
-                                    <div class="card" style="border-radius: 20px;">
-                                        <img class="img-fluid" alt="100%x280" style="border-radius: 20px;"
-                                            src="https://images.unsplash.com/photo-1532771098148-525cefe10c23?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=3f317c1f7a16116dec454fbc267dd8e4">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Special title treatment</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to
-                                                additional content.</p>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="col-md-4 mb-3">
-                                    <div class="card" style="border-radius: 20px;">
-                                        <img class="img-fluid" alt="100%x280" style="border-radius: 20px;"
-                                            src="https://images.unsplash.com/photo-1532715088550-62f09305f765?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=ebadb044b374504ef8e81bdec4d0e840">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Special title treatment</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to
-                                                additional content.</p>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 mb-3">
-                                    <div class="card" style="border-radius: 20px;">
-                                        <img class="img-fluid" alt="100%x280" style="border-radius: 20px;"
-                                            src="https://images.unsplash.com/photo-1506197603052-3cc9c3a201bd?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=0754ab085804ae8a3b562548e6b4aa2e">
-                                        <div class="card-body">
-                                            <h4 class="card-title">Special title treatment</h4>
-                                            <p class="card-text">With supporting text below as a natural lead-in to
-                                                additional content.</p>
-
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
+                <div class="view overlay">
+                    {% comment %}
+                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg"
+                        class="card-img-top" {% endcomment %} <img src="{{ item.image.url }}"
+                        style="border-radius: 20px;" class="card-img-top">
+                    <a href="{{ item.get_absolute_url }}">
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
                 </div>
+
+                <div class="card-body text-center">
+                    <a href="" class="grey-text">
+                        <h5>{{ item.get_category_display }}</h5>
+                    </a>
+                    <h5>
+                        <strong>
+                            <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
+                            </a>
+                        </strong>
+                    </h5>
+
+                    <h4 class="font-weight-bold blue-text">
+                        <strong>$
+                            {% if item.discount_price %}
+                            {{ item.discount_price }}
+                            {% else %}
+                            {{ item.price }}
+                            {% endif %}
+                        </strong>
+                    </h4>
+
+                </div>
+
             </div>
+
         </div>
+        {% endfor %}
+        
     </div>
     <div class="text-center">
         <a class="btn btn-dark" href="/home/" style="border-radius: 20px; color: #aedac8;">Shop Now</a>
     </div>
+
 </section>
+
+
 
 <div class="container">
     <div class="pl-3" style="background-color: #161616; border-radius: 20px;">
